--- a/Index.html
+++ b/Index.html
@@ -35,9 +35,9 @@
 
   <!-- Hero -->
   <header class="min-h-screen flex flex-col items-center justify-center text-center px-6">
-    <h1 class="text-6xl font-extrabold">SOFTWARE ENGINEER</h1>
+    <h1 class="text-6xl font-extrabold">ASPIRING AI ENGINEER</h1>
     <p class="mt-4 text-xl max-w-md">
-      I craft sleek and futuristic user experiences.
+      I craft smart and futuristic experiences powered by AI.
     </p>
     <a href="#projects" class="btn-neon mt-8">VIEW MY WORK</a>
   </header>
@@ -49,7 +49,10 @@
   <section id="about" class="py-20 px-6 md:px-20">
     <h2 class="text-4xl font-semibold mb-4">ABOUT ME</h2>
     <p class="max-w-2xl leading-relaxed">
-      A brief introduction to who I am and what I do.
+      I'm Adrian Cintras, currently working toward a Bachelor of Science in Applied Artificial Intelligence at Miami Dade College.
+      Before that, I spent about 4 months at a software engineering bootcamp with Colorado Technical College, where I got a solid foundation in programming. That’s when I realized I was way more drawn to the AI side of things—so I followed that curiosity.
+      Since then, I’ve been building on that base, teaching myself more about AI while in school, and working on projects that combine creativity with real problem-solving. Whether it’s automating tasks, building small agents, or experimenting with machine learning, I’m always exploring what’s possible.
+      I’m all about turning interesting ideas into smart, usable systems—and this portfolio is where I show that work.
     </p>
   </section>
 
